fixes #11 update the task definition to add action to update and delete task definitions
